# neopult

./: .gitignore  Cargo.toml  LICENSE  README.md  dev-env.sh  init-example.lua  init.lua  neopult.lua  vnc-setup.sh  vnc-start.sh
assets/vnc/: vncstartup  zathurarc
config/nginx/: neopult.DOMAIN.com
config/systemd/: neopult-novnc@.service  neopult-vncserver@.service  neopult.service  neopult@.service  novnc.service  novnc@.service  vncserver.service  vncserver@.service
neopult/: Cargo.toml  init-example.lua  init.lua  neopult.lua
neopult-lighthouse/: Cargo.toml
neopult-lighthouse/src/: main.rs
neopult-lighthouse/static/: style.css
neopult-lighthouse/templates/: channel-overview.html
neopult/assets/vnc/: channel-banner.tex  vncstartup  zathurarc
neopult/plugins/: channel_banner.lua  cvh_camera.lua  vnc.lua
neopult/src/: config.rs  main.rs  plugin_system.rs  window_manager.rs
neopult/src/plugin_system/: api.rs  log.rs
neopult/svelte/: .env.example  package-lock.json  package.json  svelte.config.js  tailwind.config.cjs  tsconfig.json
neopult/svelte/src/: app.css  app.html  hooks.ts
neopult/svelte/src/components/: App.svelte  Button.svelte  Login.svelte  Module.svelte
neopult/svelte/src/lib/: neopult.ts  params.ts
neopult/svelte/src/routes/: __layout.svelte  index.svelte
neopult/web/: index.html  script.js
plugins/: camera_mode.lua  channel_banner.lua  cvh_camera.lua  output.lua  vnc.lua  xapps.lua  xclock.lua
plugins/cvh_camera/: config.json  init.lua
scripts/: dev-env.sh  dev-setup.sh  neopult-setup.sh  novnc-start.sh  vnc-start.sh
src/: config.rs  main.rs  plugin_system.rs  server.rs  window_manager.rs
src/plugin_system/: api.rs  config.rs  log.rs
web/: index.html  script.js  style.css
