[package]
name = "neopult"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18", features = ["full"] }
mlua = { version = "0.7", features = ["luajit"] }
axum = { version = "0.5", features = ["ws"] }
xcb = { version = "1.1", features = ["randr"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
os_pipe = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
