[package]
name = "neopult-lighthouse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18", features = ["full"] }
axum = { version = "0.5" }
askama = "0.11"
clap = { version = "3.2", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
