[package]
name = "neopult"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18", features = ["full"] }
mlua = { version = "0.7", features = ["luajit", "vendored", "send"] }
axum = { version = "0.5", features = ["ws"] }
tower-http = { version = "0.3", features = ["fs", "trace"] }
xcb = { version = "1.1", features = ["randr"] }
nix = { version = "0.24", features = ["signal"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
rand = "0.8"
sha2 = "0.10"
